<resources>
    <string name="app_name">Phone Call History</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="phoneCallsHistory">Get history</string>

    <string name="phoneCallHistoryTitle">Phone call history</string>
    <string name="phoneCallsHistorySettings_timeToSendPhoneCallHistoryKey">timeToSendPhoneCallHistory</string>
    <string name="phoneCallsHistorySettings_title">Sender history settings</string>
    <string name="phoneCallsHistorySettings_timeToSendPhoneCallHistory">Time</string>
    <string name="phoneCallsHistorySettings_timeToSendPhoneCallHistorySummary">Schedule the time to send phone call history to the selected email every day.</string>
    <string name="phoneCallsHistorySettings_emailToSendPhoneCallHistoryKey">emailToSendPhoneCallHistory</string>
    <string name="phoneCallsHistorySettings_emailToSendPhoneCallHistory">Email</string>
    <string name="phoneCallsHistorySettings_emailToSendPhoneCallHistorySummary">Add the email to send the phone call history</string>
    <string name="phoneCallsHistorySettings_emailFromKey">emailFromToSendPhoneCallHistory</string>
    <string name="phoneCallsHistorySettings_emailFromPasswordKey">passwordFromEmailToSendPhoneCallHistory</string>
    <string name="phoneCallsHistorySettings_emailFromSummary">Select email to use as from in the email</string>
    <string name="phoneCallsHistorySettings_emailFromTitle">From </string>
    <string name="phoneCallsHistorySettings_emailFromPasswordTitle">Email From Password</string>
    <string name="phoneCallsHistorySettings_emailFromPasswordSummary">Password for the From email. Select only if you haven\'t configure an email account in your phone</string>
    <string name="export_contacts">Export contacts</string>
    <string name="import_contacts">Import contacts</string>
</resources>
